# NanoC

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
NanoC/: NanoC.opam  dune-project
NanoC/lib/: dune  lexer.ml  lexer.mli  position.ml  span.ml  token.ml
NanoC/test/: test_NanoC.ml
aux/book/: README.md
aux/examples/: 01_basics.nc
aux/rs_old/: Cargo.toml
aux/tooling/: README.md
aux/wiki/: ADR-0002-tuple-returns-and-error-handling.md  ADR-0003-assignment-as-expression.md  ADR-0004-array-syntax.md  ADR-0007-inline-keyword.md  README.md  (+4 more)
book/: book.toml
design/: grammar.ebnf
examples/: 01_basics.nc
grammar/: CMakeLists.txt  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
grammar/bindings/c/: tree-sitter-nanoc.pc.in
grammar/bindings/go/: binding.go  binding_test.go
grammar/bindings/node/: binding.cc  index.d.ts  index.js
grammar/bindings/python/tests/: test_binding.py
grammar/bindings/python/tree_sitter_nanoc/: __init__.py  binding.c
grammar/bindings/rust/: build.rs  lib.rs
grammar/bindings/swift/TreeSitterNanoc/: nanoc.h
grammar/bindings/swift/TreeSitterNanocTests/: TreeSitterNanocTests.swift
grammar/src/: grammar.json  node-types.json  parser.c
lib/: ast.ml  atoi.ml  dune  lexer.ml  parser.ml  span.ml  token.ml
spec/: DESIGN.md  grammar.ebnf  grammar.y
src/: lexer.rs  lib.rs  main.rs  parser.rs
std/: mem.nc
test/: dune  test.nc  test_NanoC.ml  test_atoi.ml  test_lexer.ml  test_lexer_integration.ml
tooling/: nanoc.vim  test_syntax.nc
(+77 files in other folders)
