[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-nanoc"
description = "a simple systems PL targeting RISC-V and xv6"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "nanoc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vincent Lafouasse" }]
requires-python = ">=3.10"
license.text = "WTFPL"
readme = "README.md"

[project.urls]
Homepage = "github.com/vincent-lafouasse/nanoc"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
